--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "strings-and-files"]
 	path = strings-and-files
 	url = git@git.dartmouth.edu:lib-digital-strategies/RDS/workshops/text-analysis/strings-and-files.git
+[submodule "word-counts"]
+	path = word-counts
+	url = git@git.dartmouth.edu:lib-digital-strategies/RDS/workshops/text-analysis/word-counts.git
