--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "topics-and-emotions"]
 	path = topics-and-emotions
 	url = git@git.dartmouth.edu:lib-digital-strategies/RDS/workshops/text-analysis/topics-and-emotions.git
+[submodule "next-steps"]
+	path = next-steps
+	url = git@git.dartmouth.edu:lib-digital-strategies/RDS/workshops/text-analysis/next-steps.git
